[tool.poetry]
name = "calcengine"
version = "0.1.0"
description = "A Lazy Graph Calculation Engine"
authors = ["Blair Azzopardi <blairuk@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pyqt5 = { version = "^5.15.0", optional = true }
pandas = { version = "^1.0.5", optional = true }
matplotlib = { version = "^3.3.0", optional = true }
Pillow = { version = "^7.2.0", optional = true }

[tool.poetry.extras]
demo = ["pyqt5", "pandas", "matplotlib", "Pillow"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=50"]
build-backend = "poetry.core.masonry.api"
