[tool.poetry]
name = "calcengine"
version = "0.2.0"
description = "A Lazy Graph Calculation Engine"
authors = ["Blair Azzopardi <blairuk@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pyqt5 = { version = "^5.15.6", optional = true }
pandas = { version = "^1.4.1", optional = true }
matplotlib = { version = "^3.5.1", optional = true }
Pillow = { version = "^9.0.1", optional = true }

[tool.poetry.extras]
demo = ["pyqt5", "pandas", "matplotlib", "Pillow"]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=50"]
build-backend = "poetry.core.masonry.api"
